network-policy/networkpolicy-example.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}                 # Select all pods in the namespace
  policyTypes:
  - Ingress
  - Egress
# Default deny; then create specific policies to allow required traffic.
